workspace/correlation_ver2_axis/.metadata/.plugins/org.eclipse.core.resources/.history/72/820e4ba849e200161a93cfd3079a182a
================================================================
  Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
  Version 2014.4
  Build 1071461 on Tue Nov 18 16:42:57 PM 2014
  Copyright (C) 2014 Xilinx Inc. All rights reserved.
================================================================
@I [LIC-101] Checked out feature [HLS]
@I [HLS-10] Running '/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/bin/unwrapped/lnx64.o/vivado_hls'
            for user 'trungnguyen' on host 'verratnix.zmk.uni-kl.de' (Linux_x86_64 version 2.6.32-573.18.1.el6.x86_64) on Tue Jan 24 16:23:50 CET 2017
            in directory '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls'
@I [HLS-10] Creating and opening project '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/correlation_accel_v3'.
@I [HLS-10] Adding design file '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp' to the project
@I [HLS-10] Creating and opening solution '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/correlation_accel_v3/solution'.
@I [HLS-10] Cleaning up the solution database.
@I [HLS-10] Setting target device to ' xc7z020clg484-1 '
@I [SYN-201] Setting up clock 'default' with a period of 5.95ns.
@I [HLS-10] Analyzing design file '/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp' ... 
@E [HLS-70] Compilation errors found:
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:98:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:99:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_return,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:100:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnSquare,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:101:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_return,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:102:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnA_returnB,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:103:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_returnA,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:104:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnSquareA,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:105:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnA
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:111:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:112:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_return,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:113:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnSquare,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:114:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_return,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:115:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnA_returnB,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:116:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_returnA,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:117:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnSquareA,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:118:5: error: calling a private constructor of class 'hls::stream<float>'
                                sum_weight_returnA,
                                ^
/opt/Xilinx/SDSoC/2014.4/Vivado_HLS/2014.4/include/hls_stream.h:261:5: note: declared private here
    stream(const stream< __STREAM_T__ >& chn):
    ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:277:12: error: use of undeclared identifier 'conv1'
           conv1.ival   = in_indices[0].data;
           ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:278:27: error: use of undeclared identifier 'conv1'
           shift_reg[1] = conv1.floatval;
                          ^
/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/src/correlation_accel_v3.cpp:279:12: error: use of undeclared identifier 'tmp1'
           tmp1.keep    = in_indices[0].keep;
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
Failed checking during preprocessing.
    while executing
"csynth_design"
    (file "/home/trungnguyen/SDSoC/workspace/correlation_ver2_axis/correlation_axis_ver3/SDRelease/_sds/vhls/correlation_accel_v3_run.tcl" line 10)
@I [LIC-101] Checked in feature [HLS]
